--- a/templates/register.html
+++ b/templates/register.html
@@ -53,6 +53,8 @@
                     <option value="santiago">Santiago</option>
                     <option value="condado del rey">Condado Del Rey</option>
                     <option value="centro autorizado arraijan">Centro Autorizado Arraijan</option>
+                    <option value="escuela bet yacoov">Escuela Bet Yacoov</option>
+                    <option value="escuela de la salle">Escuela De La Salle</option>
                 </select>
             </div>
 
